--- a/style.css
+++ b/style.css
@@ -1,313 +1,407 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #20374B;
+  background-color: #20374b;
 }
-
 
 /* header */
 header {
-    width: 100%;
-    height: 70px;
-    position: fixed;
+  width: 100%;
+  height: 70px;
+  position: fixed;
 }
 
 header nav .menu {
-    background-color: #F6E050;
-    width: 2rem;
-    height: 2rem;
-    border-radius: 50%;
+  background-color: #f6e050;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
 }
 
 header nav {
-    width: 90%;
-    height: 70px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: 90%;
+  height: 70px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 header nav .social-media span {
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    background-color: #F6E050;
-    width: 2rem;
-    height: 2rem;
-    border-radius: 50%;
-    margin-left: 1rem;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  background-color: #f6e050;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  margin-left: 1rem;
 }
 
 header nav .menu {
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
 }
 
 header nav .social-media {
-    display: flex;
+  display: flex;
 }
 
 /* landing */
 
 .landing {
-    font-family: 'Quicksand', sans-serif;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  font-family: "Quicksand", sans-serif;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .landing .landing-content {
-    text-align: center;
-    color: white;
+  text-align: center;
+  color: white;
 }
 
 .landing-content h1 {
-    font-size:80px;
-    margin-bottom: .5rem;
+  font-size: 80px;
+  margin-bottom: 0.5rem;
 }
 
 .landing-content h2 {
-    font-size:30px;
-    margin-bottom: 2rem;
+  font-size: 30px;
+  margin-bottom: 2rem;
 }
 
 .landing-content span {
-    color: #F6E050;
-    font-weight: bold;
+  color: #f6e050;
+  font-weight: bold;
 }
 
 .landing-content a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 /* about */
 
 .about {
-    height: 100vh;
-    background-color: white;
-    padding-top: 4rem;
+  height: 100vh;
+  background-color: white;
+  padding-top: 4rem;
 }
 
 .about .about-content {
-    width: 80%;
-    height: 100%;
-    margin: 0 auto;
-    text-align: center;
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .about-content h1 {
-    font-family: 'Quicksand', sans-serif;
-    font-size: 60px;
-    color:#20374B;
+  font-family: "Quicksand", sans-serif;
+  font-size: 60px;
+  color: #20374b;
 }
 
 .about-content h1 span {
-    border-bottom: 6px solid #F6E050;
+  border-bottom: 6px solid #f6e050;
 }
 
 .about-content .about-info {
-    margin-top:3rem;
-    display: flex;
-    justify-content: space-around;
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-around;
 }
 
 .about-content .about-info .description {
-    width: 50%;
-    text-align: justify;
-    background-color: #20374B;
-    padding: 2rem;
-    border-radius: 10px;
-    font-family: 'Poppins', sans-serif;
-    color: white;
+  width: 50%;
+  text-align: justify;
+  background-color: #20374b;
+  padding: 2rem;
+  border-radius: 10px;
+  font-family: "Poppins", sans-serif;
+  color: white;
+  height: 200px;
+  margin-top: 2rem;
 }
 
 .about-content .about-info .img {
-    background-color: #F6E050;
-    width: 25%;
-    border-radius: 50%;
-    height: 250px;
+  background-color: #f6e050;
+  width: 250px;
+  border-radius: 50%;
+  height: 250px;
 }
 
 /* services */
 
 .services {
-    padding-top: 4rem;
-    height: 100vh;
+  padding-top: 4rem;
+  height: 100vh;
 }
 
 .services .services-content {
-    width: 80%;
-    height: 100%;
-    margin: 0 auto;
-    text-align: center;
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .services-content h1 {
-    font-family: 'Quicksand', sans-serif;
-    font-size: 60px;
-    color: white;
+  font-family: "Quicksand", sans-serif;
+  font-size: 60px;
+  color: white;
 }
 
 .services-content h1 span {
-    border-bottom: 6px solid #F6E050;
+  border-bottom: 6px solid #f6e050;
 }
 
 .services-content .service-boxes {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 4rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 4rem;
 }
 
 .services-content .service-boxes .service-box {
-    width: 300px;
-    height: 360px;
-    background: -moz-linear-gradient(top, #f6e050 0%, #0ec297 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #f6e050 0%,#0ec297 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #f6e050 0%,#0ec297 100%);
-    border-radius: 10px;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  width: 300px;
+  height: 360px;
+  background: -moz-linear-gradient(
+    top,
+    #f6e050 0%,
+    #0ec297 100%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    #f6e050 0%,
+    #0ec297 100%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #f6e050 0%, #0ec297 100%);
+  border-radius: 10px;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .services-content .service-boxes .service-box h3 {
-    font-family: 'Quicksand', sans-serif;
-    font-size: 30px;
-    color: #20374B;
-    margin-bottom: 1rem;
+  font-family: "Quicksand", sans-serif;
+  font-size: 30px;
+  color: #20374b;
+  margin-bottom: 1rem;
 }
 
 .services-content .service-boxes .service-box span {
-    font-family: 'Poppins', sans-serif;
-    color: white;
+  font-family: "Poppins", sans-serif;
+  color: white;
 }
-
-
 
 /* projects */
 
 .projects {
-    padding-top: 4rem;
-    height: 100vh;
-    background-color: white;
+  padding-top: 4rem;
+  height: 100vh;
+  background-color: white;
 }
 
 .projects .projects-content {
-    width: 80%;
-    height: 100%;
-    margin: 0 auto;
-    text-align: center;
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .projects .projects-content h1 {
-    font-family: 'Quicksand', sans-serif;
-    font-size: 60px;
-    color:#20374B;;
+  font-family: "Quicksand", sans-serif;
+  font-size: 60px;
+  color: #20374b;
 }
 
 .projects-content h1 span {
-    border-bottom: 6px solid #F6E050;
+  border-bottom: 6px solid #f6e050;
 }
 
 .projects-content .project .circle {
-    height: 8rem;
-    width: 8rem;
-    border-radius: 50%;
-    background: -moz-linear-gradient(top, #f6e050 0%, #0ec297 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #f6e050 0%,#0ec297 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #f6e050 0%,#0ec297 100%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 5rem;
-    color: white;
-    font-family: 'Quicksand', sans-serif;
+  height: 8rem;
+  width: 8rem;
+  border-radius: 50%;
+  background: -moz-linear-gradient(
+    top,
+    #f6e050 0%,
+    #0ec297 100%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    #f6e050 0%,
+    #0ec297 100%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #f6e050 0%, #0ec297 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 5rem;
+  color: white;
+  font-family: "Quicksand", sans-serif;
 }
 
 .projects-content .projects-box {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 5rem;
-    width: 100%;
-    height: 80%;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 5rem;
+  width: 100%;
+  height: 80%;
 }
 
 .projects-content .projects-box .project {
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .projects-content .projects-box .project h3 {
-    font-family: 'Quicksand', sans-serif;
-    font-size: 30px;
-    color: #20374B;
-    margin-bottom: 1rem;
-    margin-top: .5rem;
+  font-family: "Quicksand", sans-serif;
+  font-size: 30px;
+  color: #20374b;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
 }
 
 .projects-content .projects-box .project .project-desc {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-.projects-content .projects-box .project .project-desc  a {
-    text-decoration: none;
-    color: white;
-    background:#0ec297;
-    padding: .4rem;
-    border-radius: 7px;
+.projects-content .projects-box .project .project-desc a {
+  text-decoration: none;
+  color: white;
+  background: #0ec297;
+  padding: 0.4rem;
+  border-radius: 7px;
 }
 
-.projects-content .projects-box .project .project-desc  .links {
-    margin-top: .5rem;
+.projects-content .projects-box .project .project-desc .links {
+  margin-top: 1rem;
 }
 
 /* contact */
 
 .contact {
-    height: 100vh;
-    font-family: 'Quicksand', sans-serif;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+  height: 100vh;
+  font-family: "Quicksand", sans-serif;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .contact .title {
-    font-size: 60px;
-    font-family: 'Quicksand', sans-serif;
+  font-size: 60px;
+  font-family: "Quicksand", sans-serif;
 }
 
 .contact .contact-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .contact .email {
-    font-family: 'Quicksand', sans-serif;
-    font-size: 65px;
-    color: #F6E050;
-    margin-bottom: .5rem;
+  font-family: "Quicksand", sans-serif;
+  font-size: 65px;
+  color: #f6e050;
+  margin-bottom: 0.5rem;
 }
 
 .contact .email a {
-    color: #F6E050;
-    text-decoration: none;
+  color: #f6e050;
+  text-decoration: none;
 }
 
+.fab,
+.fas {
+  color: white;
+  margin-bottom: 0.5rem;
+}
 
-.fab, .fas {
-    color: white;
-    margin-bottom: .5rem;
+/* modal */
+
+.modal-bg {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgb(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+}
+
+.modal {
+  background-color: white;
+  width: 30%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding: 1.5rem;
+}
+
+.modal-active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal-x {
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  cursor: pointer;
+  background-color: #0ec297;
+  padding: 0 0.5rem;
+  border-radius: 4px;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  text-align: justify;
+}
+
+.modal p {
+  margin-top: 1rem;
+  font-family: "Poppins", sans-serif;
+  text-align: justify;
+}
+
+.modal a {
+  text-align: center;
+  margin: 1rem;
+  text-decoration: none;
+  background-color: #0ec297;
+  padding: 0.5rem;
+  border-radius: 4px;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+}
+
+.services button {
+  text-decoration: none;
+  color: white;
+  background: #0ec297;
+  padding: 0.7rem;
+  border-radius: 7px;
+  border: none;
+  font-family: "Poppins", sans-serif;
+  margin-top: 4rem;
+  text-transform: uppercase;
+  font-size: 1.3rem;
 }
