--- a/style.css
+++ b/style.css
@@ -127,8 +127,13 @@ header nav .social-media {
   border-radius: 10px;
   font-family: "Poppins", sans-serif;
   color: white;
-  height: 200px;
+  /* height: 200px; */
   margin-top: 2rem;
+  font-size: 1.5rem;
+}
+
+.about-content .about-info .img {
+  margin-bottom: 2rem;
 }
 
 .about-content .about-info img {
