--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ header nav .social-media {
 .about-content h1 {
   font-family: "Quicksand", sans-serif;
   font-size: 60px;
+  margin-bottom: 2rem;
   color: #20374b;
 }
 
@@ -117,6 +118,7 @@ header nav .social-media {
   justify-content: space-around;
   height: 70%;
   align-items: center;
+  flex-direction: column;
 }
 
 .about-content .about-info .description {
@@ -133,6 +135,7 @@ header nav .social-media {
 }
 
 .about-content .about-info .img {
+  margin-top: 2rem;
   margin-bottom: 2rem;
 }
 
@@ -167,9 +170,11 @@ header nav .social-media {
 
 .services-content .service-boxes {
   width: 100%;
+  height: 60%;
   display: flex;
   justify-content: space-evenly;
   margin-top: 4rem;
+  align-items: center;
 }
 
 .services-content .service-boxes .service-box {
@@ -255,8 +260,8 @@ header nav .social-media {
 
 .projects-content .projects-box {
   display: flex;
-  justify-content: space-evenly;
-  margin-top: 5rem;
+  align-items: center;
+  justify-content: space-around;
   width: 100%;
   height: 80%;
 }
@@ -430,8 +435,8 @@ header nav .social-media {
 }
 
 .nav-links.open {
-  clip-path: circle(1800px at 0%);
-  -webkit-clip-path: circle(1800px at 0%);
+  clip-path: circle(3000px at 0%);
+  -webkit-clip-path: circle(3000px at 0%);
   pointer-events: all;
 }
 
@@ -449,7 +454,15 @@ html {
 
 /* media query */
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1600px) {
+  .about-content .about-info .description {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 2rem;
+  }
+}
+
+@media screen and (max-width: 800px) {
   .social-media {
     display: none;
   }
@@ -474,7 +487,8 @@ html {
   }
 
   .about-content img {
-    margin-bottom: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
   }
 
   .about-content .about-info {
